Support Java 11